# Engineering-Mathematics

./: CmakeLists (copy)  CmakeLists.txt  README.md
HW/: CMakeLists.txt  CmakeLists.txt
HW/example/: CMakeLists.txt  CmakeLists.txt  example-vector  main.cpp
HW/hw1/: CMakeLists.txt  CmakeLists.txt  main.cpp  system_function.h
HW/hw1/include/: system_function.h
HW/hw1/src/: main.cpp
HW/hw2/: CMakeLists.txt  CmakeLists.txt  exercise2_2_a.cpp  exercise2_2_b.cpp  exercise2_3.cpp  main.cpp  readme.txt  sysfunc_exercise2_2_a.h  sysfunc_exercise2_3.h  system_function.h
HW/hw2/include/: sysfunc_exercise2_2_a.h  sysfunc_exercise2_2_b.h
HW/hw2/src/: exercise2_2_a.cpp  exercise2_2_b.cpp  exercise2_3.cpp
Lec1/: CmakeLists.txt  main.cpp  main.py
Lec3/: CmakeLists.txt  main.py
Lectures/: CmakeLists.txt
Lectures/Lec1/: CMakeLists.txt  CmakeLists.txt  main.cpp
Lectures/Lec3/: CMakeLists.txt  CmakeLists.txt  main.cpp
Lectures/Lec5/: CMakeLists.txt  CmakeLists.txt  main.cpp
